--- a/src/pages/VideoMeet/VideoMeet.module.css
+++ b/src/pages/VideoMeet/VideoMeet.module.css
@@ -1,4 +1,4 @@
-.topNav{
+.topNav {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -6,31 +6,93 @@
     height: 7vh;
     background-color: white;
 }
-.topNavLeft{
+
+.topNavLeft {
     display: flex;
+    align-items: center; /* 保证左侧元素垂直居中 */
 }
-.topNavRight{
+
+.topNavRight {
     display: flex;
     margin-right: 2vw;
     align-items: center;
-
 }
-.hearder{
+
+.header {
     background-color: whitesmoke;
     height: 40px;
     width: 40px;
     margin-right: 1vw;
-    border-radius: 6cqh;
+    border-radius: 50%; /* 圆形头像 */
 }
-.subtitle{
+
+.subtitle {
     margin-right: 1vw;
     margin-top: -0.2vh;
+    font-size: 16px;
+    font-weight: normal;
+    cursor: pointer;
 }
-.title{
-color: #007bff;
-margin-left: 2vw;
-    margin-right: 4vw;
 
-font-size: large;
-font-weight: 600;
+.title {
+    color: #007bff;
+    margin-left: 2vw;
+    margin-right: 4vw;
+    font-size: large;
+    font-weight: 600;
+}
+
+.userRole {
+    font-size: 14px;
+    color: #666;
+    font-weight: bold;
+}
+.cardbox{
+    width: 100%;
+    margin-top: 4vh;
+    height: 12vh;
+    display: flex;
+    padding: 0 2vw;
+    justify-content: space-between;
+}
+.cardItem{
+    width: 30vh;
+    height: 100%;
+    background-color: white;
+    border-radius: 8px;
+}
+.cardtitle{
+    font-size: 16px;
+    font-weight: 600;
+    margin-left: 2vw;
+    margin-top: 1.5vh;
+    font-weight: normal;
+
+}
+.carddata1{
+    font-size: 28px;
+    font-weight: 600;
+    margin-left: 2vw;
+    margin-top: 1vh;
+}
+.carddata2{
+    font-size: 28px;
+    font-weight: 600;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    color:rgb(62, 247, 99)
+}.carddata3{
+    font-size: 28px;
+    font-weight: 600;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    color:red;
+
+}
+.carddata4{
+    font-size: 28px;
+    font-weight: 600;
+    margin-left: 2vw;
+    margin-top: 1vh;
+    color:blue;
 }
